# react-native-opaque

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  playwright.config.ts  react-native-opaque.podspec  tsconfig.json
.github/workflows/: build-android.yml  build-ios.yml  ci.yml  e2e-android.yml  e2e-ios.yml  e2e-web.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/opaque/: OpaqueModule.java  OpaquePackage.java
cpp/: CPPLINT.cfg  opaque-rust.cpp  opaque-rust.h  react-native-opaque.cpp  react-native-opaque.h
e2e-tests/: maestro-flow-android.yml  maestro-flow-ios.yml
e2e-tests/web/: db.js  example.spec.ts  full-flow.e2e.ts  server.js
example/: app.json  index.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/opaqueexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/opaqueexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/opaqueexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/OpaqueExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/OpaqueExample.xcodeproj/: project.pbxproj
example/ios/OpaqueExample.xcodeproj/xcshareddata/xcschemes/: OpaqueExample.xcscheme
example/ios/OpaqueExample.xcworkspace/: contents.xcworkspacedata
example/ios/OpaqueExampleTests/: OpaqueExampleTests.m
example/src/: App.tsx  OpaqueTests.ts  Test.ts  TestResults.tsx  Tests.tsx  lib.ts
example/web/: webpack.config.js
ios/: Opaque.h  Opaque.mm
ios/Opaque.xcodeproj/: project.pbxproj
rust/: Cargo.toml  bindings.h  build-all.bat  build-all.sh  build-android.bat  build-android.sh  gen-cxx.bat  gen-cxx.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
src/: index.ts  index.tsx  index.web.ts
